--- a/Movie-Review-home-page-styling/server/.env
+++ b/Movie-Review-home-page-styling/server/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/team-manager
+MONGODB_URI=mongodb://localhost:27017/movie-review-app
+JWT_SECRET=your_jwt_secret_here
 PORT=8000
